unpackaged/main/default/objects/Currency_API__mdt/Currency_API__mdt.object-meta.xml
<CustomObject>
    <label>Currency API</label>
    <pluralLabel>Currency APIs</pluralLabel>
</CustomObject>