unpackaged/main/default/objects/Currency_API__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>API key</description>
    <label>API Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>