unpackaged/main/default/objects/Currency_API__mdt/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <description>Host of URL</description>
    <label>Host</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>