unpackaged/main/default/objects/Currency_API__mdt/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Purpose part of the API URL</description>
    <label>Purpose</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>